# gnome-hello

./: .cvsignore  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  acconfig.h  autogen.sh  config.h.in  configure.ac  configure.in  gnome-hello.desktop  gnome-hello.desktop.in  gnome-hello.doap
doc/: Makefile.am
doc/C/: Makefile.am  gnome-hello-C.omf  gnome-hello.sgml
doc/es/: Makefile.am  gnome-hello-es.omf  gnome-hello.sgml
help/: Makefile.am  gnome-hello.omf.in
help/C/: Makefile.am  compiling.page  gnome-hello.xml  index.page  what-can-do.page  what-is-like.page  what-is.page
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/eo/: eo.po
help/es/: es.po
help/fr/: fr.po
help/ja/: ja.po
help/oc/: oc.po
help/os/: os.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/sl/: sl.po
help/sv/: sv.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
omf-install/: Makefile.am
pixmaps/: Makefile.am
po/: .cvsignore  ChangeLog  LINGUAS  POTFILES.in  am.po  ar.po  az.po  be.po  bg.po  bs.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  fur.po  gl.po  gu.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  lv.po  mjw.po  mk.po  ml.po  mn.po  ms.po  nb.po  (+26 more)
src/: .cvsignore  Makefile.am  app.c  app.h  hello.c  icon.c  menus.c  menus.h
