include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_ID = gnome-hello
DOC_INCLUDES = legal.xml
DOC_FIGURES = figures/gnome-hello.png \
	      figures/gnome-hello-new.png \
	      figures/gnome-hello-logo.png

DOC_PAGES = index.page \
  compiling.page \
  what-is.page \
  what-is-like.page \
  what-can-do.page


DOC_LINGUAS = cs da de el eo es fr ja oc os pt_BR sl sv uk zh_CN

-include $(top_srcdir)/git.mk
