@YELP_HELP_RULES@

YELP_ID = gnome-hello

YELP_MEDIA = figures/gnome-hello.png \
	     figures/gnome-hello-new.png \
	     figures/gnome-hello-logo.png

YELP_PAGES = index.page \
  compiling.page \
  what-is.page \
  what-is-like.page \
  what-can-do.page \
  legal.xml


YELP_LINGUAS = cs da de el eo es fr ja oc os pt_BR sl sv uk zh_CN

-include $(top_srcdir)/git.mk
