@YELP_HELP_RULES@

HELP_ID = gnome-hello

HELP_MEDIA = figures/gnome-hello-new.png \
	     figures/gnome-hello-logo.png

HELP_FILES = index.page \
  compiling.page \
  what-is.page \
  what-is-like.page \
  what-can-do.page \
  legal.xml


HELP_LINGUAS = cs da de el eo es fr ja oc os pl pt_BR sl sv uk zh_CN

-include $(top_srcdir)/git.mk
