iconthemedir = $(datadir)/icons/hicolor

icondir = $(iconthemedir)/48x48/apps
icon_DATA = gnome-hello-logo.png

update_icon_cache = gtk-update-icon-cache --ignore-theme-index --force

install-data-hook: install-update-icon-cache
uninstall-hook: uninstall-update-icon-cache

install-update-icon-cache:
	$(AM_V_at)$(POST_INSTALL)
	test -n "$(DESTDIR)" || $(update_icon_cache) "$(iconthemedir)"

uninstall-update-icon-cache:
	$(AM_V_at)$(POST_UNINSTALL)
	test -n "$(DESTDIR)" || $(update_icon_cache) "$(iconthemedir)"


EXTRA_DIST = $(icon_DATA)

-include $(top_srcdir)/git.mk
